--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hello, My name is Cody Barnett and I am a glaciolgoy graduate student at KU!</h1>
-				<p>Please excuse the clutter, I am currently constructing my wesbite and it is currently in its' infancy.</p>
+        		<h1>Hello,Cody T. Barnett, M.S.!</h1>
+				<p>Please excuse the clutter, I am currently constructing my wesbite and learning HTML and github.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
