--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hello,Cody T. Barnett, M.S.!</h1>
+        		<h1>Cody T. Barnett, M.S.</h1>
 				<p>Please excuse the clutter, I am currently constructing my wesbite and learning HTML and github.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
