--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Cody Barnett, M.S.</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Cody T. Barnett, M.S.</h1>
-				<p>Please excuse the clutter, I am currently constructing my wesbite and learning HTML and github.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:codybarnett@ku.com">email</a></li>
-        		<li><a href="https://github.com/CBarnett207">my github</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Cody Barnett, M.S.
+---
+<div class="blurb">
+	<h1>Sorry for the inconvience, website under construction.</h1>
+	<p>If you wait a bit I will get you a website!</p>
+</div><!-- /.blurb -->
+</div><!-- /.container -->
