--- a/research/index.html
+++ b/research/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Cody Barnett, M.S. | Research
 ---
 <div class="blurb">
-  <div align="center"></h1>Research</h1>
+  <div align="center"><h1>Research</h1>
     <p>Throughout my academic career my research interests have been varied between multidisciplinary projects within the oceangraphic 
       and cryospheric sciences. My current research focuses on quantifying complicated ocean-cryosphere interactions through observational
       remote sensing techniques. Using NASA Operation IceBridge (OIB) radar depth sounder imagery, I compute submarine melt rates for ice
