--- a/photography/index.html
+++ b/photography/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Cody Barnett, M.S. | Photography
 ---
 <div class="blurb">
-  <h1>Photography<h1>
-    <p>please come back soon for more information </p>
-    </div><!-- /.blurb -->
+   <div align="center"><h1>Photography<h1>
+      <p>please come back soon for more information </p>
+</div><!-- /.blurb -->
