--- a/community/index.html
+++ b/community/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Cody Barnett, M.S. | Community
 ---
 <div class="blurb">
-  <div align="center"><h1>Community<h1>
+  <div align="center"><h1>Community</h1>
     <p>please come back soon for more information </p>
 </div><!-- /.blurb -->
