--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Cody Barnett, M.S. | About
 ---
 <div class="blurb">
-  <h1>About<h1>
+  <h1>About</h1>
     <p>please come back soon for more information </p>
-    </div><!-- /.blurb -->
+</div><!-- /.blurb -->
