--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Cody Barnett, M.S.
 ---
 <div class="blurb">
-	<h1>Cody T. Barnett, M.S.</h1>
+	<div align="center"><h1>Cody T. Barnett, M.S.</h1>
 	<p>Sorry for the inconvience. I am currently working on my website and will be updating as quickly as I can.</p>
 </div><!-- /.blurb -->
 </div><!-- /.container -->
