--- a/cv/index.html
+++ b/cv/index.html
@@ -3,8 +3,6 @@ layout: default
 title: Cody Barnett, M.S. | CV
 ---
 <div class="blurb">
-    <h1>CV</h1>
-    </br>
-    <div align="center"><p>please come back soon for more information </p>
-    <br/>
-    </div><!-- /.blurb -->
+    <div align="center"><h1>CV</h1>
+            <p>please come back soon for more information </p>    
+</div><!-- /.blurb -->
