--- a/research/index.html
+++ b/research/index.html
@@ -4,8 +4,8 @@ title: Cody Barnett, M.S. | Research
 ---
 <div class="blurb">
     <div align="center"><h1>Research</h1>
-      <p>Throughout my academic career my research interests have been varied between multidisciplinary projects within the oceangraphic 
-      and cryospheric sciences. My current research focuses on quantifying complicated ocean-cryosphere interactions through observational
-      remote sensing techniques. Using NASA Operation IceBridge (OIB) radar depth sounder imagery, I compute submarine melt rates for ice
-      shelves throughout northern Greenland. </p>
+        <div align="left"><p>Throughout my academic career my research interests have been varied between multidisciplinary projects within the oceangraphic 
+        and cryospheric sciences. My current research focuses on quantifying complicated ocean-cryosphere interactions through observational
+        remote sensing techniques. Using NASA Operation IceBridge (OIB) radar depth sounder imagery, I compute submarine melt rates for ice
+        shelves throughout northern Greenland. </p>
     </div><!-- /.blurb -->
