--- a/research/index.html
+++ b/research/index.html
@@ -4,8 +4,12 @@ title: Cody Barnett, M.S. | Research
 ---
 <div class="blurb">
     <div align="center"><h1>Research</div></h1>
-        <div align="left"><p>Throughout my academic career my research interests have been varied between multidisciplinary projects within the oceangraphic 
-        and cryospheric sciences. My current research focuses on quantifying complicated ocean-cryosphere interactions through observational
-        remote sensing techniques. Using NASA Operation IceBridge (OIB) radar depth sounder imagery, I compute submarine melt rates for ice
-        shelves throughout northern Greenland. </p>
+        <div align="left"><p>Throughout my academic career my research interests have been varied between multidisciplinary projects within the 
+            ocean and cryosphere sciences. My current research focuses on investigating poorly constrained ocean-ice interactions along Greenland 
+            ice shelves using observational remote sensing techniques. Ice shelves are macro-scale floating extensions of marine-terminating 
+            glaciers that are commonly found along ice sheet margins. The three most common mechanisms for mass loss along ice shelve are 1) iceberg 
+            calving, 2) submarine melting via ocean water, and 3) seasonal surface ablation caused by surface melt and sublimation. While both calving 
+            and surface melt are quantifiable via satellite remote sensing, melt along the undersides of ice shelves is not. Thus, for my thesis 
+            research, I use repeat NASA Operation IceBridge (OIB) radar imagery to quantify changes in ice shelf basal topography between sequential
+            years. </p>
     </div><!-- /.blurb -->
