--- a/community/index.html
+++ b/community/index.html
@@ -3,6 +3,18 @@ layout: default
 title: Cody Barnett, M.S. | Community
 ---
 <div class="blurb">
-  <div align="center"><h1>Community</h1>
-    <p>please come back soon for more information </p>
+  <div align="center"><h1>Polar Community Resources</h1>
+    <p> Are you curious how you can get more involved in community efforts to address current justice, equity, diversity, and inclusion (JEDI) issues within the 
+    geosciences and polar science communities? 
+    Are you a student interested in in polar sciences but do not know where to start searching for information about field course
+    opportunities or graduate school positions? Check out the websites below to see how you can become involved!  </p>
+    CRYOCOMMUNITY</p>
+    <p>URGE</p>
+    <p>MINORITIES IN POLAR SCIENCES</p>
+    <p>GEOGRADAPP</p>
+    <p>JIRP</p>
+    <p>UNIS</p>
+    <p>MCCARTHY</p>
+    <p>GRISSO</p>
+
 </div><!-- /.blurb -->
