--- a/community/index.html
+++ b/community/index.html
@@ -11,6 +11,7 @@ title: Cody Barnett, M.S. | Community
     <h2>CRYOCOMMUNITY</h2>
     <h2>URGE</h2>
     <h2>MINORITIES IN POLAR SCIENCES</h2>
+    <h2>POLAR IMPACT</h2>
     <h2>GEOGRADAPP</h2>
     <h2>JIRP</h2>
     <h2>UNIS</h2>
