--- a/community/index.html
+++ b/community/index.html
@@ -17,5 +17,6 @@ title: Cody Barnett, M.S. | Community
     <h2>UNIS</h2>
     <h2>MCCARTHY</h2>
     <h2>GRISSO</h2>
+    <h2>CRYOLIST</h2>
 
 </div><!-- /.blurb -->
