--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Cody Barnett, M.S. | About
+title: Cody Barnett | About
 ---
 <div class="blurb">
-  <div align="center"><h1>About</h1>
-    <p>please come back soon for more information </p>
+  <div align="left"><h1>About Me</h1>
+    <p>Cody is a currently a graduate student at the University of Kansas's where he is earning his Master's degree in Geology. </p>
 </div><!-- /.blurb -->
