--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Cody Barnett, M.S.
+title: Cody Barnett
 ---
 <div class="blurb">
 	<div align="center"><h1>Cody T. Barnett, M.S.</h1>
