--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Cody Barnett | About
 ---
 <div class="blurb">
-  <div align="left"><h1>About Me</h1>
+  <div align="center"><h1>About Me</h1></div>
+  <div align="left">
     <p>Cody is a currently a graduate student at the University of Kansas's where he is earning his Master's degree in Geology. </p>
 </div><!-- /.blurb -->
