--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Cody Barnett
 ---
 <div class="blurb">
-	<div align="center"><h1>Cody T. Barnett, M.S.</h1>
-	<p>Sorry for the inconvience. I am currently working on my website and will be updating as quickly as I can.</p>
+	<div align="center"><h1>Cody T. Barnett</h1><\div>
+	<div align="center"><p>Sorry for the inconvience. I am currently working on my website and will be updating as quickly as I can.</p></div>
 </div><!-- /.blurb -->
 </div><!-- /.container -->
