updating cryocommunity text - test
testing link and text

--- a/community/index.html
+++ b/community/index.html
@@ -9,9 +9,12 @@ title: Cody Barnett, M.S. | Community
     Are you a student interested in in polar sciences but do not know where to start searching for information about field course
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
     <h2>CRYOCOMMUNITY</h2>
-      <div align="center">
-			  <li><a href="https://cryocommunity.org/" style="text-decoration:none"></a></li>
-		  </div>
+      <div align="left">
+	      <p style="width:500px">The product of the Midwest and Random Stragglers (MARS) URGEgeosciences program, 
+		      <li><a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a></li>
+		      is a community driven intiation within the polar sciences. 
+	      </p>
+	</div>
     <h2>URGE</h2>
     <h2>MINORITIES IN POLAR SCIENCES</h2>
     <h2>POLAR IMPACT</h2>
