updated cryocommunity text
added full paragraph to cryocommunity and removed problematic link part.

--- a/community/index.html
+++ b/community/index.html
@@ -10,9 +10,12 @@ title: Cody Barnett, M.S. | Community
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
     <h2>CRYOCOMMUNITY</h2>
       <div align="left">
-	      <p style="width:500px">The product of the Midwest and Random Stragglers (MARS) URGEgeosciences program, 
-		      <li><a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a></li>
-		      is a community driven intiation within the polar sciences. 
+	      <p style="width:1200px">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
+		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
+		      intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
+		      the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
+		      inclusivity plans while attending conferences, to student mentoring and educational websites for teaching. Please check out their website 
+		      for the latest updates, and you how can make the polar and geoscience communities a more acessible and safer place for everyone.
 	      </p>
 	</div>
     <h2>URGE</h2>
