changed text width
changed text width and added hyperlink to headers

--- a/community/index.html
+++ b/community/index.html
@@ -8,9 +8,9 @@ title: Cody Barnett, M.S. | Community
     geosciences and polar science communities? 
     Are you a student interested in in polar sciences but do not know where to start searching for information about field course
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
-    <h2>CRYOCOMMUNITY</h2>
+    <h2><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></h2>
       <div align="left">
-	      <p style="width:1200px">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
+	      <p style="width:1000px">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
 		      intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
 		      the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
