--- a/community/index.html
+++ b/community/index.html
@@ -9,7 +9,7 @@ title: Cody Barnett, M.S. | Community
     Are you a student interested in in polar sciences but do not know where to start searching for information about field course
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
     <h2><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></h2>
-      <div align="left">
+      <div align="justify">
 	      <p style="width:1100px">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
 		      intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
