justify everything for text

--- a/community/index.html
+++ b/community/index.html
@@ -4,13 +4,13 @@ title: Cody Barnett, M.S. | Community
 ---
 <div class="blurb">
   <div align="center"><h1>Polar Community Resources</h1></div>
-    <div align="left"><p> Are you curious how you can get more involved in community efforts to address current justice, equity, diversity, and inclusion (JEDI) issues within the 
+    <div align="justify"><p> Are you curious how you can get more involved in community efforts to address current justice, equity, diversity, and inclusion (JEDI) issues within the 
     geosciences and polar science communities? 
     Are you a student interested in in polar sciences but do not know where to start searching for information about field course
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
     <h2><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></h2>
       <div align="left">
-	      <p align="justify" style="width:1100px">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
+	      <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
 		      intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
 		      the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
