--- a/community/index.html
+++ b/community/index.html
@@ -8,8 +8,7 @@ title: Cody Barnett, M.S. | Community
     geosciences and polar science communities? 
     Are you a student interested in in polar sciences but do not know where to start searching for information about field course
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
-    <h2><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY<img src="/images/Cryo_Community_Logo.png" width="50pt" alt="CryoCommunity Logo"/>&nbsp;&nbsp;</a>
-					</h2>
+    <h2><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></h2><img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" width="50pt" alt="CryoCommunity Logo"/>&nbsp;&nbsp;
       <div align="left">
 	      <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
