--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@ title: Cody Barnett, M.S. | Community
     <div>
 	 <h2>
 		<img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" width="50pt" alt="CryoCommunity Logo"/>
-    	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></span>
+    	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a></span>
 	 </h2>
 	 <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
@@ -21,14 +21,30 @@ title: Cody Barnett, M.S. | Community
 		      for the latest updates, and you how can make the polar and geoscience communities a more acessible and safer place for everyone.
 	      </p>
 	</div>
-    <h2>URGE</h2>
-    <h2>MINORITIES IN POLAR SCIENCES</h2>
-    <h2>POLAR IMPACT</h2>
-    <h2>GEOGRADAPP</h2>
-    <h2>JIRP</h2>
-    <h2>UNIS</h2>
-    <h2>MCCARTHY</h2>
-    <h2>GRISSO</h2>
-    <h2>CRYOLIST</h2>
+    	<h2>
+		<span style=""><a href="https://urgeoscience.medium.com/unlearning-racism-in-geoscience-1f40aa32216e" style="text-decoration:none">UNLEARNING RACISM IN GEOSCIENCE</a></span>
+	</h2>
+    	<h2>MINORITIES IN POLAR SCIENCES</h2>
+    	<h2>
+		<span style=""><a href="https://www.polarimpactnetwork.org/" style="text-decoration:none">Polar Impact</a></span>
+	</h2>
+    	<h2>
+		<span style=""><a href="https://geogradapp.com/" style="text-decoration:none">Graduate School Application Station</a></span>	
+	</h2>
+	<h2>
+		<span style=""><a href="https://lists.cryolist.org/mailman/listinfo/cryolist" style="text-decoration:none">CRYOLIST</a></span>
+	</h2>
+    	<h2>
+		<span style=""><a href="https://juneauicefield.org/" style="text-decoration:none">JUNEAU ICEFIELD RESEARCH PROGRAM (JIRP)</a></span>
+	</h2>
+    	<h2>
+		<span style=""><a href="https://www.unis.no/" style="text-decoration:none">UNIVERSITY CENTRE IN SVALBARD (UNIS)</a></span>
+	</h2>
+    	<h2>
+		<span style=""><a href="https://glaciers.gi.alaska.edu/courses/summerschool" style="text-decoration:none">MCCARTHY INTERNATIONAL SUMMER SCHOOL IN GLACIOLOGY</a></span>
+	</h2>
+    	<h2>
+		<span style=""><a href="https://griso.ucsd.edu/griso-summer-school-2022/" style="text-decoration:none">GREENLAND ICE SHEET OCEAN SCIENCE NETWORK (GRISO) SUMMER SCHOOL</a></span>
+	</h2>
 
 </div><!-- /.blurb -->
