add URGE Logo and change scaling
change scaling of URGE logo to use height

--- a/community/index.html
+++ b/community/index.html
@@ -10,7 +10,7 @@ title: Cody Barnett, M.S. | Community
     opportunities or graduate school positions? Check out the websites below to see how you can become involved!</p></div>
     <div>
 	 <h2>
-		<img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" width="50pt" alt="CryoCommunity Logo"/>
+		<img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" height="60pt" alt="CryoCommunity Logo"/>
     	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a></span>
 	 </h2>
 	 <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
@@ -22,6 +22,7 @@ title: Cody Barnett, M.S. | Community
 	      </p>
 	</div>
     	<h2>
+		<img style="vertical-align:middle" src="/images/URGE_logo.png" height="60pt" alt="URGE Logo"/>
 		<span style=""><a href="https://urgeoscience.medium.com/unlearning-racism-in-geoscience-1f40aa32216e" style="text-decoration:none">UNLEARNING RACISM IN GEOSCIENCE</a></span>
 	</h2>
     	<h2>MINORITIES IN POLAR SCIENCES</h2>
