capitalize all title links
capitalized all title links

--- a/community/index.html
+++ b/community/index.html
@@ -11,7 +11,7 @@ title: Cody Barnett, M.S. | Community
     <div>
 	 <h2>
 		<img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" height="40pt" alt="CryoCommunity Logo"/>
-    	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a></span>
+    	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></span>
 	 </h2>
 	 <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
 		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
@@ -27,10 +27,10 @@ title: Cody Barnett, M.S. | Community
 	</h2>
     	<h2>MINORITIES IN POLAR SCIENCES</h2>
     	<h2>
-		<span style=""><a href="https://www.polarimpactnetwork.org/" style="text-decoration:none">Polar Impact</a></span>
+		<span style=""><a href="https://www.polarimpactnetwork.org/" style="text-decoration:none">POLAR IMPACT</a></span>
 	</h2>
     	<h2>
-		<span style=""><a href="https://geogradapp.com/" style="text-decoration:none">Graduate School Application Station</a></span>	
+		<span style=""><a href="https://geogradapp.com/" style="text-decoration:none">GRADUATE SCHOOL APPLICATION STATION (GEOGRADAPP)</a></span>	
 	</h2>
 	<h2>
 		<span style=""><a href="https://lists.cryolist.org/mailman/listinfo/cryolist" style="text-decoration:none">CRYOLIST</a></span>
