test personal image
test personal image inclusion

--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,7 @@ title: Cody Barnett | About
 <div class="blurb">
   <div align="center"><h1>About Me</h1></div>
   <div align="left">
+    <p style="float: left;"><img style="vertical-align:middle" src="/images/Personal_photo.jpg" height="400px" width="200px" border="10px" alt="self_portrait"></p>
     <p>
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
       where I am advised by <a href="https://stearns.ku.edu/">Dr. Leigh Stearns</a>, who heads the 
@@ -32,4 +33,5 @@ title: Cody Barnett | About
     <p>    
       When I am not in the lab or away on fieldwork, I enjoy trail running, mountain biking, skiing, and trying new recipes with my friends! 
     </p>
+      
 </div><!-- /.blurb -->
