--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,18 @@
 ---
-layout: default
+layout: about_default
 title: Cody Barnett | About
 ---
 <div class="blurb">
   <div align="center"><h1>About Me</h1></div>
   <div align="left">
-    <p style="float: left;"><img style="vertical-align:top" src="/images/Personal_photo.jpg" height="300px" width="auto" alt="self_portrait"></p>
-    <p>
+</div><!-- /.blurb -->
+  
+<div class="container">
+  <div class="container__img">
+    <img src="/images/Personal_photo.jpg" class="img"/>
+  </div>
+   <div class="container__texts">
+     <p>
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
       where I am advised by <a href="https://stearns.ku.edu/">Dr. Leigh Stearns</a>, who heads the 
       <a href="https://geo.ku.edu/glaciology-and-remote-sensing-laboratory">Glaciology and Remote Sensing Laboratory</a>. 
@@ -33,5 +39,5 @@ title: Cody Barnett | About
     <p>    
       When I am not in the lab or away on fieldwork, I enjoy trail running, mountain biking, skiing, and trying new recipes with my friends! 
     </p>
-      
-</div><!-- /.blurb -->
+  </div>
+</div>
