--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,8 @@ title: Cody Barnett | About
 <div class="blurb">
   <div align="center"><h1>About Me</h1></div>
   <div align="left">
-    <p style="float: left;"><img style="vertical-align:top" src="/images/Personal_photo.jpg" height="300px" width="auto" alt="self_portrait"></p>
+    <p style="float: left;"><img style="vertical-align:top" src="/images/Personal_photo.jpg" height="300px" 
+        width="auto" hspace="20px" alt="self_portrait"></p>
     <p>
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
       where I am advised by <a href="https://stearns.ku.edu/">Dr. Leigh Stearns</a>, who heads the 
