--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@ title: Cody Barnett | About
 <div class="blurb">
   <div align="center"><h1>About Me</h1></div>
   <div align="left">
-    <p style="float: left; padding:0px,20px,0px,0px;"><img style="vertical-align:middle" src="/images/Personal_photo.jpg" height="325px" 
-        width="auto" alt="self_portrait"></p>
+    <p style="float: left;"><img style="vertical-align:middle" src="/images/Personal_photo.jpg" height="325px" 
+        hspace="20px" width="auto" alt="self_portrait"></p>
     <p>
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
       where I am advised by <a href="https://stearns.ku.edu/">Dr. Leigh Stearns</a>, who heads the 
