--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@ title: Cody Barnett | About
       <a href="https://cresis.ku.edu/">Center for Remote Sensing and Integrated Systems (CReSIS)</a> at KU, my research addresses 
       the rate at which melt occurs along specific glaciers, and how melt impacts the growth of crevasses throughout time. Curious 
       about the specifics of my current and past research projects? You can find more information under 
-      <a href ="https://codybarnett.github.io/research/"> research</a> tab on this website!
+      <a href ="https://codybarnett.github.io/research/">Research</a> tab on this website!
     </p>
     <p>    
       When I am not in the lab or away on fieldwork, I enjoy trail running, mountain biking, skiing, and trying new recipes with my friends! 
