--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: Cody Barnett | About
   <div align="left">
     <p style="float: left;"><img style="vertical-align:middle" src="/images/Personal_photo.jpg" height="300px" 
         hspace="20px" vspace="0px" width="auto" alt="self_portrait"></p>
-    <p>
+    <p><h3><span style="font-weight:normal">
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
       where I am advised by <a href="https://stearns.ku.edu/">Dr. Leigh Stearns</a>, who heads the 
       <a href="https://geo.ku.edu/glaciology-and-remote-sensing-laboratory">Glaciology and Remote Sensing Laboratory</a>. 
@@ -16,8 +16,8 @@ title: Cody Barnett | About
       that were focused on using geophysical instrumentation for earth observations in both the marine and cryosphere settings. 
       My prior projects include both a multi-beam sonar bathymetric survey of the Bagaduce River Estuary system in Maine, and 
       multi ice-penetrating radar surveys along the Mathes, Llewellyn, and Tulsequah glaciers on the Juneau Icefield in Alaska. 
-    </p>
-    <p>
+    </span></h3></p>
+    <p><h3><span style="font-weight:normal">
       I am interested in using ice-penetrating radar in conjunction with various other remote sensing techniques to investigate 
       spatial and temporal changes along the base of ice shelves caused by oceanic forcing. My current research focuses on 
       using historic <a href ="https://icebridge.gsfc.nasa.gov/">NASA Operation IceBridge</a> radar imagery to investigate how 
@@ -31,9 +31,9 @@ title: Cody Barnett | About
       the rate at which melt occurs along specific glaciers, and how melt impacts the growth of crevasses throughout time. Curious 
       about the specifics of my current and past research projects? You can find more information under 
       <a href ="https://codybarnett.github.io/research/">Research</a> tab on this website!
-    </p>
-    <p>    
+  </span></h3></p>
+    <p><h3><span style="font-weight:normal">    
       When I am not in the lab or away on fieldwork, I enjoy trail running, mountain biking, skiing, and trying new recipes with my friends! 
-    </p>
+      </span></h3></p>
       
 </div><!-- /.blurb -->
