--- a/community/index.html
+++ b/community/index.html
@@ -13,14 +13,16 @@ title: Cody Barnett, M.S. | Community
 		<img style="vertical-align:middle" src="/images/Cryo_Community_Logo.png" height="40pt" alt="CryoCommunity Logo"/>
     	 	<span style=""><a href="https://cryocommunity.org/" style="text-decoration:none">CRYOCOMMUNITY</a></span>
 	 </h2>
-	 <p align="justify">The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
-		      <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
-		      intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
-		      the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
-		      inclusivity plans while attending conferences, to student mentoring and educational websites for teaching. Please check out their website 
-		      for the latest updates, and you how can make the polar and geoscience communities a more acessible and safer place for everyone.
-	      </p>
+	 <p align="justify"><h3><span style="font-weight:normal">
+	    The product of the multi-institution Midwest and Random Stragglers (MARS) URGEgeosciences pod, 
+	    <a href="https://cryocommunity.org/" style="text-decoration:none">CryoCommunity</a> is a community driven 
+            intiative within the polar sciences that provides plethora of information of best practices for accessibility and safety within 
+            the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
+	    inclusivity plans while attending conferences, to student mentoring and educational websites for teaching. Please check out their website 
+            for the latest updates, and you how can make the polar and geoscience communities a more acessible and safer place for everyone.
+	    </span></h3></p>
 	</div>
+
     	<h2>
 		<img style="vertical-align:middle" src="/images/URGE_logo.png" height="40pt" alt="URGE Logo"/>
 		<span style=""><a href="https://urgeoscience.medium.com/unlearning-racism-in-geoscience-1f40aa32216e" style="text-decoration:none">UNLEARNING RACISM IN GEOSCIENCE</a></span>
