--- a/community/index.html
+++ b/community/index.html
@@ -20,15 +20,19 @@ title: Cody Barnett, M.S. | Community
             the geosciences. CryoCommunity houses a wide range of documents and information covering topics that range from field safety protocols and 
 	    inclusivity plans while attending conferences, to student mentoring and educational websites for teaching. Please check out their website 
             for the latest updates, and you how can make the polar and geoscience communities a more acessible and safer place for everyone.
-	    </span></h3></p>
+	</span></h3></p>
 	</div>
 
     	<h2>
 		<img style="vertical-align:middle" src="/images/URGE_logo.png" height="40pt" alt="URGE Logo"/>
 		<span style=""><a href="https://urgeoscience.medium.com/unlearning-racism-in-geoscience-1f40aa32216e" style="text-decoration:none">UNLEARNING RACISM IN GEOSCIENCE</a></span>
 	</h2>
-    	<h2>MINORITIES IN POLAR SCIENCES</h2>
-    	<h2>
+	
+	<p align="justify"><h3><span style="font-weight:normal">
+    		URGE is the product of an National Science Foundation lead effort to address racism in the geosciences. 
+	</span></h3></p>
+    	
+	<h2>
 		<span style=""><a href="https://www.polarimpactnetwork.org/" style="text-decoration:none">POLAR IMPACT</a></span>
 	</h2>
     	<h2>
