--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: Cody Barnett | About
 <div class="blurb">
   <div align="center"><h1>About Me</h1></div>
   <div align="left">
-    <p style="float: left;"><img style="vertical-align:middle" src="/images/Personal_photo.jpg" height="300px" 
+    <p style="float: left;"><img style="vertical-align:top" src="/images/Personal_photo.jpg" height="300px" 
         hspace="20px" vspace="0px" width="auto" alt="self_portrait"></p>
     <p><h3><span style="font-weight:normal">
       I am a master's candidate in the <a = href="https://geo.ku.edu/">Department of Geology at the University of Kansas (KU)</a>  
