--- a/community/index.html
+++ b/community/index.html
@@ -35,6 +35,9 @@ title: Cody Barnett, M.S. | Community
 	<h2>
 		<span style=""><a href="https://www.polarimpactnetwork.org/" style="text-decoration:none">POLAR IMPACT</a></span>
 	</h2>
+	<p align="justify"><h3><span style="font-weight:normal">
+    		Polar impacts is a community lead effort to address diversity issues within the cryosphere community and promote diversity, equity, and justice related issues. 
+	</span></h3></p>
     	<h2>
 		<span style=""><a href="https://geogradapp.com/" style="text-decoration:none">GRADUATE SCHOOL APPLICATION STATION (GEOGRADAPP)</a></span>	
 	</h2>
