update default_new update layout page
update to default_new layout page settings

--- a/research_Bagaduce/index.html
+++ b/research_Bagaduce/index.html
@@ -1,10 +1,10 @@
 ---
-layout: default
-title: Cody Barnett, M.S. | Research
+layout: default_new
+title: Cody Barnett, M.S. | Bagaduce River Research Page
 ---
 <div class="blurb">
-    <div align="center"><h1>Ice Thickness Survey of the Mathes, Llewellyn, and Tulsequah Glaciers on Juneau Icefield, AK | 2018</div></h1>    
+    <div align="center"><h1>Bathymetric Survey of the Bagaduce River Estuary Castine, ME | 2016-2017</div></h1>    
         <p align="justify"><h3><span style="font-weight:normal">
-  
+        The Bagaduce River Estuary is a tidal dominated estuary system located near Castine Maine.
         </span></h3></p>
 </div><!-- /.blurb -->
