--- a/research_OIB/index.html
+++ b/research_OIB/index.html
@@ -3,8 +3,15 @@ layout: default_new
 title: Cody Barnett, M.S. | Research
 ---
 <div class="blurb">
-    <div align="center"><h1>Ice Thickness Survey of the Mathes, Llewellyn, and Tulsequah Glaciers on Juneau Icefield, AK | 2018</div></h1>    
+    <div align="center"><h1>Submarine Melt and Basal Crevasse Growth Rates for Ice Shelves in Northern Greenland | 2019-2022</div></h1>    
         <p align="justify"><h3><span style="font-weight:normal">
-  
+                Throughout my academic career my research interests have been varied between multidisciplinary projects within the 
+                ocean and cryosphere sciences. My current research focuses on investigating poorly constrained ocean-ice interactions along Greenland 
+                ice shelves using observational remote sensing techniques. Ice shelves are macro-scale floating extensions of marine-terminating 
+                glaciers that are commonly found along ice sheet margins. The three most common mechanisms for mass loss along ice shelve are 1) iceberg 
+                calving, 2) submarine melting via ocean water, and 3) seasonal surface ablation caused by surface melt and sublimation. While both calving 
+                and surface melt are quantifiable via satellite remote sensing, melt along the undersides of ice shelves is not. Thus, for my thesis 
+                research, I use repeat NASA Operation IceBridge (OIB) radar imagery to quantify changes in ice shelf basal topography between sequential
+                years. 
         </span></h3></p>
 </div><!-- /.blurb -->
