--- a/research_OIB/index.html
+++ b/research_OIB/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default_new
-title: Cody Barnett, M.S. | Research
+title: Cody Barnett, M.S. | OIB Submarine Melt and Basal Crevasse Research
 ---
 <div class="blurb">
     <div align="center"><h1>Submarine Melt and Basal Crevasse Growth Rates for Ice Shelves in Northern Greenland | 2019-2022</div></h1>    
