--- a/research_JIRP/index.html
+++ b/research_JIRP/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default_new
-title: Cody Barnett, M.S. | Research
+title: Cody Barnett, M.S. | JIRP Deep Ice Radar Research
 ---
 <div class="blurb">
     <div align="center"><h1>Ice Thickness Survey of the Mathes, Llewellyn, and Tulsequah Glaciers on Juneau Icefield, AK | 2018</div></h1>    
