--- a/research_OIB/index.html
+++ b/research_OIB/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default_new
+layout: default
 title: Cody Barnett, M.S. | OIB Submarine Melt and Basal Crevasse Research
 ---
 <div class="blurb">
